--- a/ClientApp/src/components/style/ListView.css
+++ b/ClientApp/src/components/style/ListView.css
@@ -1,7 +1,33 @@
 .list-container{
-    margin-top: 48px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: burlywood;
+    /* background-color: burlywood; */
+    height: 93vh;
+    background-color: transparent;
+}
+
+.list-holder {
+    background-color: transparent;
+    padding-top: 10px;
+    margin-top: 8px;
+    padding-left: 10%;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    flex: 1;
+    overflow-y: scroll;
+    height: 100%;
+    width: 100%;
+}
+.list-holder::-webkit-scrollbar {
+    width: 1em;
+}
+ 
+.list-holder::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(33, 129, 218, 0.3);
+}
+ 
+.list-holder::-webkit-scrollbar-thumb {
+  background-color: rgb(62, 116, 204);
+  outline: 1px solid slategrey;
 }
