--- a/ClientApp/src/components/style/LeaveApplication.css
+++ b/ClientApp/src/components/style/LeaveApplication.css
@@ -4,6 +4,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    background-color: #ffffffb8;
 }
 
 .lv-box{
@@ -12,10 +14,12 @@
     align-items: center;
     max-width: 500px;
     width: 450px;
-    height: 500px;
+    min-height: 665px;
     border-radius: 4px;
     border: 1px #e5e5e5 solid;
     padding: 38px;
+
+    box-shadow: 0 3px 6px rgba(0,0,0,0.02), 0 3px 6px rgba(0,0,0,0.04);
     
 }
 .lv-title{
@@ -24,4 +28,17 @@
     padding-bottom: 58px;
     display: block;
     font-size: 30px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.lv-title:after{
+    content: "";
+    display: block;
+    background:#3f51b583;
+    width: 60%;
+    height:1px;
+    margin-top: 16px;
 }
